--- a/src/pages/home/CalendarComponent.css
+++ b/src/pages/home/CalendarComponent.css
@@ -1,15 +1,6 @@
 .rdrCalendarWrapper {
-  background-color: #ddf2ed !important;
-  /* border: 5px solid black; */
+  /* background-color: #ddf2ed !important; */
+  color: #000000 !important;
   /* font-size: 16px !important; */
   border-radius: 10px;
-}
-
-.rdrDateDisplayWrapper {
-  background-color: #ddf2ed !important;
-}
-
-.rdrNextPrevButton,
-.rdrNextButton {
-  background-color: #ddf2ed !important;
 }
